# scorelivepro-Real-time-Sports-App-App_Oreo-Gazi-Alauddin-2325-USD

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  init-letsencrypt.sh  manage.py  pyproject.toml  requirements.txt  test_api_fetch.py  test_celery.py  test_email_send.py
apps/monitoring/: admin.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/monitoring/migrations/: 0001_initial.py  0002_guestdevice_alter_apilog_options_and_more.py  0003_servermetric_avg_response_time.py
apps/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/notifications/management/commands/: test_fcm.py
apps/notifications/migrations/: 0001_initial.py  0002_initial.py  0003_alter_notificationlog_options_and_more.py  0004_userhiddennotification.py  0005_remove_schedulednotification_audience_label_and_more.py
apps/sports/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/sports/migrations/: 0001_initial.py  0002_initial.py  0003_team_leagues.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_onetimepassword_otp.py  0003_remove_user_phone_number.py  0004_fanprofile_last_inbox_check.py
config/: asgi.py  celery.py  urls.py
config/settings/: base.py  local.py  prod.py
nginx/: nginx.conf
