[project]
name = "scorelivepro-backend"
version = "0.1.0"
description = "Real-time sports app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "cloudinary>=1.44.1",
    "cryptography>=46.0.3",
    "django-celery-beat>=2.8.1",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "firebase-admin>=7.1.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "python-jose[cryptography]",
    "google-auth",
]
